--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "aws-sdk": "^2.1498.0",
+        "dotenv": "^17.2.0",
         "keypress": "^0.2.1"
     },
     "keywords": [
